服务提供方添加配置中心、添加api网关

--- a/dubbo/dubbo-provider/pom.xml
+++ b/dubbo/dubbo-provider/pom.xml
@@ -42,6 +42,12 @@
       <artifactId>spring-cloud-starter-dubbo</artifactId>
     </dependency>
 
+    <!-- Spring Cloud Config -->
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+    </dependency>
+
     <!-- Spring Cloud Nacos Service Discovery -->
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
