--- a/dubbo/dubbo-provider/src/main/resources/bootstrap.yaml
+++ b/dubbo/dubbo-provider/src/main/resources/bootstrap.yaml
@@ -6,6 +6,8 @@ spring:
 
   cloud:
     nacos:
+      config:
+        server-addr: 10.1.60.21:8848
       # Nacos 服务发现与注册配置
       discovery:
         server-addr: 10.1.60.21:8848
