--- a/nacos-gateway/src/main/resources/application.properties
+++ b/nacos-gateway/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.cloud.gateway.routes[0].uri=lb://service-provider
 spring.cloud.gateway.routes[0].predicates[0].name=Path
 spring.cloud.gateway.routes[0].predicates[0].args[pattern]=/nacos/**
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[1].id=nacos-route
+spring.cloud.gateway.routes[1].uri=lb://spring-cloud-alibaba-dubbo-consumer
+spring.cloud.gateway.routes[1].predicates[0].name=Path
+spring.cloud.gateway.routes[1].predicates[0].args[pattern]=/dubbo/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
