--- a/nacos-discovery/nacos-discovery-provider/src/main/resources/application.properties
+++ b/nacos-discovery/nacos-discovery-provider/src/main/resources/application.properties
@@ -2,3 +2,18 @@ server.port=8070
 spring.application.name=service-provider
 spring.cloud.nacos.discovery.server-addr=10.1.60.21:8848
 
+
+#logging.level.root=INFO
+#logging.levelorg.springframework=ERROR
+#logging.levelorg.springframework.ui=DEBUG
+#logging.levelorg.springframework.boot=DEBUG
+#logging.levelorg.springframework.cloud.config=DEBUG
+#logging.levelcom.nongfadai=DEBUG
+#logging.levelspringfox.documentation=ERROR
+#logging.levelorg.javers=ERROR
+#logging.levelorg.activiti=ERROR
+#logging.levelcom.aliyun=DEBUG
+#logging.pattern.level=rqId:%X{requestId} u:%X{user} %5p
+#logging.file=/opt/nacos/provider/logs/nacos_provider.log
+#logging.file.max-size=50MB
+
