--- a/nacos-gateway/src/main/resources/application.properties
+++ b/nacos-gateway/src/main/resources/application.properties
@@ -3,14 +3,20 @@ spring.application.name=service-gateway
 spring.cloud.nacos.discovery.server-addr=10.1.60.21:8848
 
 # spring cloud route config
-spring.cloud.gateway.routes[0].id=nacos-route
+spring.cloud.gateway.routes[0].id=nacos-route1
 spring.cloud.gateway.routes[0].uri=lb://service-provider
 spring.cloud.gateway.routes[0].predicates[0].name=Path
 spring.cloud.gateway.routes[0].predicates[0].args[pattern]=/nacos/**
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 
-spring.cloud.gateway.routes[1].id=nacos-route
-spring.cloud.gateway.routes[1].uri=lb://spring-cloud-alibaba-dubbo-consumer
+spring.cloud.gateway.routes[1].id=nacos-route2
+spring.cloud.gateway.routes[1].uri=lb://spring-cloud-alibaba-dubbo-provider
 spring.cloud.gateway.routes[1].predicates[0].name=Path
-spring.cloud.gateway.routes[1].predicates[0].args[pattern]=/dubbo/**
+spring.cloud.gateway.routes[1].predicates[0].args[pattern]=/dubbop/**
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[2].id=nacos-route3
+spring.cloud.gateway.routes[2].uri=lb://spring-cloud-alibaba-dubbo-consumer
+spring.cloud.gateway.routes[2].predicates[0].name=Path
+spring.cloud.gateway.routes[2].predicates[0].args[pattern]=/dubboc/**
+spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
