--- a/dubbo/dubbo-consumer/pom.xml
+++ b/dubbo/dubbo-consumer/pom.xml
@@ -5,8 +5,8 @@
   <parent>
     <artifactId>dubbo</artifactId>
     <groupId>org.example</groupId>
-    <version>${revision}</version>
-    <relativePath>../pom.xml</relativePath>
+    <version>1.0-SNAPSHOT</version>
+
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
