--- a/nacos-config/pom.xml
+++ b/nacos-config/pom.xml
@@ -6,8 +6,8 @@
     <parent>
         <groupId>org.example</groupId>
         <artifactId>sp-alibaba</artifactId>
-        <version>${revision}</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0-SNAPSHOT</version>
+
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -37,10 +37,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
