--- a/nacos-discovery/nacos-discovery-provider/pom.xml
+++ b/nacos-discovery/nacos-discovery-provider/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>org.example</groupId>
         <artifactId>nacos-discovery</artifactId>
-        <version>${revision}</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0-SNAPSHOT</version>
+
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
