--- a/nacos-discovery/pom.xml
+++ b/nacos-discovery/pom.xml
@@ -6,8 +6,8 @@
     <parent>
         <groupId>org.example</groupId>
         <artifactId>sp-alibaba</artifactId>
-        <version>${revision}</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0-SNAPSHOT</version>
+
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
